feat: add favicon images and update HTML files for improved branding

--- a/karriere.html
+++ b/karriere.html
@@ -6,9 +6,17 @@
     <meta name="description" content="Bewirb dich als LKW-Fahrer in Augsburg und Umgebung. Flexible Arbeitszeiten, attraktive Bezahlung ab 150€ pro Tour. Jetzt initiativ bewerben!">
     <meta name="keywords" content="LKW Fahrer, Augsburg, Jobs, Nahverkehr, Führerschein CE, Fahrerjob">
     <title>LKW-Fahrer Jobs in Augsburg | Verbinden was bewegt</title>
+    
+    <!-- Favicon -->
+    <link rel="apple-touch-icon" sizes="180x180" href="assets/favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon/favicon-16x16.png">
+    <link rel="manifest" href="assets/favicon/site.webmanifest">
+    
+    <!-- Open Sans Font -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
     <style>
         * {
             margin: 0;
@@ -31,7 +39,7 @@
         }
 
         body {
-            font-family: 'Inter', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
+            font-family: 'Open Sans', system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', sans-serif;
             line-height: 1.6;
             color: var(--text-color);
             overflow-x: hidden;
