feat: add Datenschutz and Impressum pages, update index and Karriere for navigation

--- a/index.html
+++ b/index.html
@@ -46,10 +46,17 @@
         a:hover {
             text-decoration: underline;
         }
+
+        footer { margin-top: 2rem; font-size: 0.9rem; }
     </style>
 </head>
 <body>
     <h1>Verbinden was bewegt</h1>
     <p>Kontaktieren Sie uns unter <a href="mailto:info@verbinden-was-bewegt.de">info@verbinden-was-bewegt.de</a></p>
+    <footer>
+        <a href="karriere.html">Karriere</a>
+        <br />
+        <a href="impressum.html">Impressum</a>
+    </footer>
 </body>
 </html>
