--- a/karriere.html
+++ b/karriere.html
@@ -387,6 +387,9 @@
             opacity: 0.8;
         }
 
+        footer a { color: #ffffff; text-decoration: none; }
+        footer a:hover { text-decoration: underline; }
+
         /* Animations */
         @keyframes fadeInUp {
             from {
@@ -630,6 +633,7 @@
         <div class="container">
             <p><strong>Verbinden was bewegt</strong></p>
             <p>Dein Partner für LKW-Fahrer Jobs in Augsburg</p>
+            <p><a href="impressum.html">Impressum</a> · <a href="datenschutz.html">Datenschutz</a></p>
             <p>&copy; 2024 Verbinden was bewegt. Alle Rechte vorbehalten.</p>
         </div>
     </footer>
