--- a/index.html
+++ b/index.html
@@ -56,6 +56,8 @@
     <footer>
         <a href="karriere.html">Karriere</a>
         <br />
+        <a href="datenschutz.html">Datenschutz</a>
+        <br />
         <a href="impressum.html">Impressum</a>
     </footer>
 </body>
