--- a/karriere.html
+++ b/karriere.html
@@ -310,6 +310,7 @@
         input[type="text"],
         input[type="email"],
         input[type="tel"],
+        input[type="date"],
         textarea,
         select {
             width: 100%;
@@ -326,6 +327,15 @@
         select:focus {
             outline: none;
             border-color: var(--primary-color);
+        }
+
+        input[type="date"]:focus {
+            outline: none;
+            border-color: var(--primary-color);
+        }
+
+        input[type="date"]::-webkit-calendar-picker-indicator {
+            opacity: 0; /* hide native icon, use custom */
         }
 
         textarea {
@@ -575,7 +585,7 @@
                 <div class="success-message" id="successMessage">
                     ✓ Vielen Dank für deine Bewerbung! Wir melden uns schnellstmöglich bei dir.
                 </div>
-                <form id="applicationForm" aria-label="Bewerbungsformular" action="https://api.staticforms.xyz/submit" method="POST">
+                <form id="applicationForm" aria-label="Bewerbungsformular" action="https://api.staticforms.xyz/submit" method="POST" autocomplete="on">
                     <!-- StaticForms required/optional fields -->
                     <input type="hidden" name="accessKey" value="sf_m1a2bh3f60ifl2d67kbjl40g">
                     <input type="hidden" name="subject" value="Neue Bewerbung – Verbinden was bewegt">
@@ -585,20 +595,28 @@
                     <input type="text" name="honeypot" tabindex="-1" autocomplete="off" style="display:none">
 
                     <div class="form-group">
-                        <label for="name">Name *</label>
-                        <input type="text" id="name" name="name" required aria-required="true">
+                        <label for="firstName">Vorname *</label>
+                        <input type="text" id="firstName" name="firstName" required aria-required="true" autocomplete="given-name">
+                    </div>
+                    <div class="form-group">
+                        <label for="lnachname">Nachname *</label>
+                        <input type="text" id="lnachname" name="lnachname" required aria-required="true" autocomplete="family-name">
+                    </div>
+                    <div class="form-group">
+                        <label for="birthDate">Geburtsdatum *</label>
+                        <input type="date" id="birthDate" name="birthDate" required aria-required="true" autocomplete="bday">
                     </div>
                     <div class="form-group">
                         <label for="email">E-Mail *</label>
-                        <input type="email" id="email" name="email" required aria-required="true">
+                        <input type="email" id="email" name="email" required aria-required="true" autocomplete="email">
                     </div>
                     <div class="form-group">
                         <label for="phone">Telefon *</label>
-                        <input type="tel" id="phone" name="phone" required aria-required="true">
+                        <input type="tel" id="phone" name="phone" required aria-required="true" autocomplete="tel">
                     </div>
                     <div class="form-group">
                         <label for="license">Führerscheinklasse *</label>
-                        <select id="license" name="license" required aria-required="true">
+                        <select id="license" name="license" required aria-required="true" autocomplete="off">
                             <option value="">Bitte wählen</option>
                             <option value="C">Klasse C</option>
                             <option value="CE">Klasse CE</option>
@@ -606,11 +624,11 @@
                     </div>
                     <div class="form-group">
                         <label for="experience">Berufserfahrung (Jahre)</label>
-                        <input type="text" id="experience" name="experience" placeholder="z.B. 5 Jahre">
+                        <input type="text" id="experience" name="experience" placeholder="z.B. 5 Jahre" autocomplete="off">
                     </div>
                     <div class="form-group">
                         <label for="message">Deine Nachricht</label>
-                        <textarea id="message" name="message" placeholder="Erzähl uns etwas über dich..."></textarea>
+                        <textarea id="message" name="message" placeholder="Erzähl uns etwas über dich..." autocomplete="off"></textarea>
                     </div>
                     <div class="form-group">
                         <div class="checkbox-group">
